Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxfuRbuR/XHG1h0notZ28x"
+      "authorship_tag": "ABX9TyP5H+XHXGRcSmM9R8pKEmdO"
     },
     "kernelspec": {
       "name": "ir",
@@ -30,12 +30,71 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "7Fep7BjLwMMP"
+        "id": "_UkpOdo-8YBw"
       },
       "source": [
-        ""
+        "# Dimensionality Reduction \n",
+        "[Principal components analysis](https://en.wikipedia.org/wiki/Principal_component_analysis) (PCA) is a technique applied to multispectral and hyperspectral remotely sensed data. PCA transforms an original correlated dataset into a substantially smaller set of uncorrelated variables that represents most of the information present in the original dataset. It reduces data dimensionality (e.g., number of bands). Instead of throwing away the redundant data, principal components analysis condenses the information in intercorrelated variables into a few variables, called principal components.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uld5vuUVeEYj"
+      },
+      "source": [
+        "## Study area\n",
+        "Let's analyze Landsat images of the [*Parakanã Indigenous Reserve*](https://pib.socioambiental.org/en/Povo:Parakan%C3%A3) in the state of Pará, a northern region of Brazil. This reserve, founded in 1975, is listed as an indigenous area but has not been assigned to an International Union for Conservation of Nature (IUCN) category (Protected Planet, http://www protectedplanet.net). Large-scale deforestation in the region is due to agricultural expansion and cattle ranching and has modified this region considerably in the past. Mainly, the Parakanã Indigenous Reserve remains forested. A reservoir on the Rio Tocantins (Tocantins River) covers the north-east part of the area. This large body of water (Lago Tucuruí) is an artificial lake created by the construction of a hydroelectric dam called Represa de Tucuruí (Tucuruí Dam) which was finished in 1984. Construction of the dam is closely related to the observed deforestation and degradation patterns, as workers began settling down after the construction of the dam was complete. Moreover the area is bisected by the Transamazônica highway. Download Landsat images of the Parakanã Indigenous Reserve from this [link]() to get the data to use in this example.\n",
+        "\n",
+        "![](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aUjXwyfVb_jM"
+      },
+      "source": [
+        "### Install R packages\n",
+        "The [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function is used to download and install packages from CRAN-like repositories.\n",
+        "To install multiple packages at the same time, you define a vector that contains the names of the packages to be installed.\n",
+        "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-10) package defines classes and methods for spatial raster data access and manipulation. \n",
+        "[RStoolbox](https://www.rdocumentation.org/packages/RStoolbox/versions/0.2.6) is an package providing a wide range of tools for your every-day remote sensing processing needs. The available tool-set covers many aspects for remote sensing image processing and analysis such as calculating spectral indices, principal component transformation, unsupervised and supervised classification or fractional cover analyses."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l10HaqN7AZAT"
+      },
+      "source": [
+        "packages <- c(\"raster\", \"RStoolbox\")\n",
+        "install.packages(packages)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HivL27NllC4t"
+      },
+      "source": [
+        "The [library](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library) function is used to load previously installed packages.\n",
+        "Using the [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) function we simultaneously apply the `library()` function to all elements of the vector containing the packages."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PTJfZZmyt8Gi"
+      },
+      "source": [
+        "lapply(packages , library, character.only = TRUE)"
       ],
       "execution_count": null,
       "outputs": []
