Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5H+XHXGRcSmM9R8pKEmdO"
+      "authorship_tag": "ABX9TyP8r7NmJDxZe5E7GdGSWmuC"
     },
     "kernelspec": {
       "name": "ir",
@@ -44,18 +44,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uld5vuUVeEYj"
-      },
-      "source": [
-        "## Study area\n",
-        "Let's analyze Landsat images of the [*Parakanã Indigenous Reserve*](https://pib.socioambiental.org/en/Povo:Parakan%C3%A3) in the state of Pará, a northern region of Brazil. This reserve, founded in 1975, is listed as an indigenous area but has not been assigned to an International Union for Conservation of Nature (IUCN) category (Protected Planet, http://www protectedplanet.net). Large-scale deforestation in the region is due to agricultural expansion and cattle ranching and has modified this region considerably in the past. Mainly, the Parakanã Indigenous Reserve remains forested. A reservoir on the Rio Tocantins (Tocantins River) covers the north-east part of the area. This large body of water (Lago Tucuruí) is an artificial lake created by the construction of a hydroelectric dam called Represa de Tucuruí (Tucuruí Dam) which was finished in 1984. Construction of the dam is closely related to the observed deforestation and degradation patterns, as workers began settling down after the construction of the dam was complete. Moreover the area is bisected by the Transamazônica highway. Download Landsat images of the Parakanã Indigenous Reserve from this [link]() to get the data to use in this example.\n",
-        "\n",
-        "![](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "aUjXwyfVb_jM"
       },
       "source": [
@@ -85,7 +73,8 @@
       },
       "source": [
         "The [library](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library) function is used to load previously installed packages.\n",
-        "Using the [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) function we simultaneously apply the `library()` function to all elements of the vector containing the packages."
+        "Using the [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) function we simultaneously apply the `library()` function to all elements of the vector containing the packages.\n",
+        "\n"
       ]
     },
     {
@@ -95,6 +84,154 @@
       },
       "source": [
         "lapply(packages , library, character.only = TRUE)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uld5vuUVeEYj"
+      },
+      "source": [
+        "## Study area\n",
+        "Let's analyze Landsat images of the [*Parakanã Indigenous Reserve*](https://pib.socioambiental.org/en/Povo:Parakan%C3%A3) in the state of Pará, a northern region of Brazil. This reserve, founded in 1975, is listed as an indigenous area but has not been assigned to an International Union for Conservation of Nature (IUCN) category (Protected Planet, http://www protectedplanet.net). Large-scale deforestation in the region is due to agricultural expansion and cattle ranching and has modified this region considerably in the past. Mainly, the Parakanã Indigenous Reserve remains forested. A reservoir on the Rio Tocantins (Tocantins River) covers the north-east part of the area. This large body of water (Lago Tucuruí) is an artificial lake created by the construction of a hydroelectric dam called Represa de Tucuruí (Tucuruí Dam) which was finished in 1984. Construction of the dam is closely related to the observed deforestation and degradation patterns, as workers began settling down after the construction of the dam was complete. Moreover the area is bisected by the Transamazônica highway. Download Landsat images of the Parakanã Indigenous Reserve from this [link]() to get the data to use in this example.\n",
+        "\n",
+        "![](https://media.gettyimages.com/photos/large-deforestation-surrounds-the-parakana-indigenous-reserve-in-the-picture-id959485258)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cz0OtbKUou7x"
+      },
+      "source": [
+        "## Reading spatial data\n",
+        "To read and view a multilevel object it is common to use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function.\n",
+        "Select the images already pre-processed for the year 2011. Explore the properties of the `p224r63_2011` object.\n",
+        "\n",
+        "Also there may be multiple functions with the same name in multiple packages. The colon operator allows you to specify the specific function you want: `package::functionname`\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QGr8OXt-iiDd"
+      },
+      "source": [
+        "p224r63_2011 <- raster::brick(\"p224r63_2011_masked.grd\")\n",
+        "plot(p224r63_2011)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h9iS_4XFkt2w"
+      },
+      "source": [
+        "multicollinearità"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y-IWcF3_kslm"
+      },
+      "source": [
+        "plot(p224r63_2011$B1_sre, p224r63_2011$B2_sre, col=\"red\", pch=19, cex=2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "832RbDiukyv_"
+      },
+      "source": [
+        "plot(p224r63_2011$B2_sre, p224r63_2011$B1_sre, col=\"red\", pch=19, cex=2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BKJCVbwHk5dq"
+      },
+      "source": [
+        "funzione pairs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k-vLxEg-k8Jw"
+      },
+      "source": [
+        "pairs(p224r63_2011)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3u9WdEs2lHch"
+      },
+      "source": [
+        "# aggregate cells: resampling (ricampionamento)\n",
+        "p224r63_2011res <- aggregate(p224r63_2011, fact=10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "exdvTP66lU73"
+      },
+      "source": [
+        "par(mfrow=c(2,1))\n",
+        "plotRGB(p224r63_2011, r=4, g=3, b=2, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011res, r=4, g=3, b=2, stretch=\"lin\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bdMY7Z6WlWzS"
+      },
+      "source": [
+        "p224r63_2011res_pca <- rasterPCA(p224r63_2011res)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fBb4E8ZVlY_K"
+      },
+      "source": [
+        "summary(p224r63_2011res_pca$model)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WH_N4yzwlauS"
+      },
+      "source": [
+        "# dev.off()\n",
+        "plotRGB(p224r63_2011res_pca$map, r=1, g=2, b=3, stretch=\"lin\")"
       ],
       "execution_count": null,
       "outputs": []
