Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/ZYODunrZFPH/Hlrk9yUt"
+      "authorship_tag": "ABX9TyO76nsprr/oUlcP8xIuaU67"
     },
     "kernelspec": {
       "name": "ir",
@@ -152,38 +152,21 @@
         "id": "h9iS_4XFkt2w"
       },
       "source": [
-        "## Multicollinearity\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y-IWcF3_kslm"
-      },
-      "source": [
-        "plot(p224r63_2011$B1_sre, p224r63_2011$B2_sre, col=\"red\", pch=19, cex=2)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "832RbDiukyv_"
-      },
-      "source": [
-        "plot(p224r63_2011$B2_sre, p224r63_2011$B1_sre, col=\"red\", pch=19, cex=2)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BKJCVbwHk5dq"
-      },
-      "source": [
-        "funzione pairs"
+        "## Multicollinearity\n",
+        "The spectral bands of an image have some degree of correlation with each other.\n",
+        "Excessive correlation between two or more bands results in a\n",
+        "greater redundancy of overall information.\n",
+        "This feature, called [multicollinearity](https://en.wikipedia.org/wiki/Multicollinearity) or collinearity, can be useful for eliminating unnecessary information to view images. In this way you get a good compromise between size and quality of an image.\n",
+        "\n",
+        "It is possible to visualize the degree of correlation between each pair of bands through different scatter plots. We can either manually build the individual graphs like this:\n",
+        "```\n",
+        "plot(p224r63_2011$B1_sre, p224r63_2011$B2_sre, col=\"red\", pch=19, cex=2)\n",
+        "                                     .\n",
+        "                                     .\n",
+        "                                     .\n",
+        "plot(p224r63_2011$B6_sre, p224r63_2011$B5_sre, col=\"red\", pch=19, cex=2)\n",
+        "```\n",
+        "Otherwise, we can use the [pairs](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/pairs) function to automatically produce a scatterplot matrix with the respective correlation coefficients.\n"
       ]
     },
     {
@@ -196,6 +179,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ommndDa-ahv"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "code",
