Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNt9LNmc40LIXPyM6iYzFh8"
+      "authorship_tag": "ABX9TyMhVuoYW79znzSsZJRLCKEa"
     },
     "kernelspec": {
       "name": "ir",
@@ -243,10 +243,19 @@
         "id": "bdMY7Z6WlWzS"
       },
       "source": [
-        "p224r63_2011_pca <- RStoolbox::rasterPCA(p224r63_2011)"
+        "p224r63_2011.pca <- RStoolbox::rasterPCA(p224r63_2011)"
       ],
       "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Z3XUkT4wSgF"
+      },
+      "source": [
+        "Explore the parameters of the PCA model by running the `summary()` of the `p224r63_2011_pca` object."
+      ]
     },
     {
       "cell_type": "code",
@@ -259,7 +268,7 @@
         "outputId": "323123f2-2f00-4ed1-a30d-afe412f2390f"
       },
       "source": [
-        "summary(p224r63_2011_pca$model)"
+        "summary(p224r63_2011.pca$model)"
       ],
       "execution_count": 18,
       "outputs": [
@@ -291,7 +300,7 @@
       },
       "source": [
         "pdf(file = '/content/ImagePCA_res.pdf')\n",
-        "plotRGB(p224r63_2011_pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
         "dev.off()"
       ],
       "execution_count": null,
@@ -320,7 +329,7 @@
         "par(mfrow = c(3,1))\n",
         "plotRGB(p224r63_2011, r = 3, g = 2, b = 1, stretch = \"lin\")\n",
         "plotRGB(p224r63_2011, r = 4, g = 3, b = 2, stretch = \"lin\")\n",
-        "plotRGB(p224r63_2011_pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
         "dev.off()"
       ],
       "execution_count": null,
@@ -351,8 +360,8 @@
         "outputId": "12dc9819-32f4-4d66-829d-e4c70b4c7f9e"
       },
       "source": [
-        "p224r63_2011_res <- aggregate(p224r63_2011, fun=mean, fact=10)\n",
-        "p224r63_2011_res"
+        "p224r63_2011.res <- aggregate(p224r63_2011, fun=mean, fact=10)\n",
+        "p224r63_2011.res"
       ],
       "execution_count": 21,
       "outputs": [
@@ -393,7 +402,7 @@
       },
       "source": [
         "# PCA\n",
-        "p224r63_2011_res_pca <- RStoolbox::rasterPCA(p224r63_2011_res)"
+        "p224r63_2011.res.pca <- RStoolbox::rasterPCA(p224r63_2011.res)"
       ],
       "execution_count": null,
       "outputs": []
@@ -418,9 +427,11 @@
       },
       "source": [
         "pdf(file = '/content/downsampling.pdf')\n",
-        "par(mfrow=c(2,1))\n",
+        "par(mfrow=c(2,2))\n",
         "plotRGB(p224r63_2011, r=4, g=3, b=2, stretch=\"lin\")\n",
-        "plotRGB(p224r63_2011_res, r=4, g=3, b=2, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.res, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.pca, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.res.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
         "dev.off()"
       ],
       "execution_count": null,
