Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhVuoYW79znzSsZJRLCKEa"
+      "authorship_tag": "ABX9TyNYvax9qyYc2WZZrDRmGZ/o"
     },
     "kernelspec": {
       "name": "ir",
@@ -106,7 +106,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -147,13 +147,13 @@
           "height": 170
         },
         "id": "QGr8OXt-iiDd",
-        "outputId": "269bc871-e53e-47fb-96a5-8c11c12db981"
+        "outputId": "fefb0c4c-e342-4b06-ec84-ed3dec3360f8"
       },
       "source": [
         "p224r63_2011 <- raster::brick(\"p224r63_2011_masked.grd\")\n",
         "p224r63_2011"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -182,6 +182,7 @@
         "id": "z0d4dIXNzi16"
       },
       "source": [
+        "LANDSAT BANDS: \\\\\n",
         "$\\mathsf{B1}$ = Blue; \n",
         "$\\mathsf{B2}$ = Green;\n",
         "$\\mathsf{B3}$ = Red;\n",
@@ -243,9 +244,10 @@
         "id": "bdMY7Z6WlWzS"
       },
       "source": [
-        "p224r63_2011.pca <- RStoolbox::rasterPCA(p224r63_2011)"
+        "p224r63_2011.pca <- RStoolbox::rasterPCA(p224r63_2011)\n",
+        "p224r63_2011.pca"
       ],
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -254,7 +256,7 @@
         "id": "1Z3XUkT4wSgF"
       },
       "source": [
-        "Explore the parameters of the PCA model by running the `summary()` of the `p224r63_2011_pca` object."
+        "Explore the parameters of the PCA model by running the `summary()` of the `p224r63_2011.pca` object."
       ]
     },
     {
@@ -265,12 +267,12 @@
           "height": 170
         },
         "id": "fBb4E8ZVlY_K",
-        "outputId": "323123f2-2f00-4ed1-a30d-afe412f2390f"
+        "outputId": "e8620365-23bc-45b4-80fc-8ed4818105ab"
       },
       "source": [
         "summary(p224r63_2011.pca$model)"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -294,13 +296,86 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E3SZt4G_KetF"
+      },
+      "source": [
+        "Through this transformation the measurements contained in the spectral bands are redistributed in the new components (synthetic bands) so that most of the information of the multispectral image is contained in the first three principal components (variance explained = 99.9956%).\n",
+        "\n",
+        "**Loadings matrix**\n",
+        "\n",
+        "The load matrix provides information on how much each band \"weighs\" and how each band is associated with each of the PCs.\n",
+        "For example, the PC1 is described mainly by the thermal infrared band (B6_bt = 0.999)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X29bm9_AMDSe",
+        "outputId": "d916ef61-5147-4f15-f404-3ccb6878eca5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        }
+      },
+      "source": [
+        "loadings(p224r63_2011.pca$model)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n",
+              "Loadings:\n",
+              "       Comp.1 Comp.2 Comp.3 Comp.4 Comp.5 Comp.6 Comp.7\n",
+              "B1_sre                0.112  0.296         0.443  0.838\n",
+              "B2_sre                0.163  0.649  0.209  0.485 -0.517\n",
+              "B3_sre                0.273  0.599        -0.736  0.140\n",
+              "B4_sre         0.903 -0.412        -0.103              \n",
+              "B5_sre         0.389  0.675 -0.349  0.519              \n",
+              "B6_bt   0.999                                          \n",
+              "B7_sre         0.151  0.510        -0.821  0.158 -0.104\n",
+              "\n",
+              "               Comp.1 Comp.2 Comp.3 Comp.4 Comp.5 Comp.6 Comp.7\n",
+              "SS loadings     1.000  1.000  1.000  1.000  1.000  1.000  1.000\n",
+              "Proportion Var  0.143  0.143  0.143  0.143  0.143  0.143  0.143\n",
+              "Cumulative Var  0.143  0.286  0.429  0.571  0.714  0.857  1.000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PON7qgfLRyY_"
+      },
+      "source": [
+        "### Visualization of spatial data\n",
+        "Several generic functions have been implemented for \"raster\" objects to create maps and other plot types. For example, use [plot](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plot) function to create a map of a raster object.\n",
+        "In addition, individual bands can be combined into a single image by assigning individual layers or bands to one of the three color channels (red, green and blue). \n",
+        "The [plotRGB](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plotRGB) function can be used to make \"true (or false) color images\" from multi-band satellite images.\n",
+        "In this case, the resulting color tone in the image will be related to the combination of the first three PCs assigned to the three RGB bands.\n",
+        "\n",
+        "Export the image using the [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function to enlarge it better and view the results.\n",
+        "\n",
+        "N.B. always use the `dev.off()` function to manage the correct closing and loading of the graphics device.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WH_N4yzwlauS"
       },
       "source": [
         "pdf(file = '/content/ImagePCA_res.pdf')\n",
-        "plotRGB(p224r63_2011.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.pca$map, r = 1, g = 2, b = 3, stretch=\"lin\")\n",
         "dev.off()"
       ],
       "execution_count": null,
@@ -312,11 +387,9 @@
         "id": "lbXaTlsISGUE"
       },
       "source": [
-        "Use the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function to compare the different spatial resolution between the initial image and the resampled one.\n",
+        "In practice, the PCA technique highlights elements or details not visible in the original image. It also solves color display problems of multispectral images in which only three color dimensions (blue, green, and red) are available.\n",
         "\n",
-        "Export the image using the [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function to enlarge it better and view the differences.\n",
-        "\n",
-        "N.B. always use the `dev.off()` function to manage the correct closing and loading of the graphics space."
+        "Use the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par)  function to compare the original true and false color images with the image resulting from the combination of three PCs (PC1, PC2 and PC3).\n"
       ]
     },
     {
@@ -327,9 +400,9 @@
       "source": [
         "pdf(file = '/content/Comp_ImagePCA_res.pdf')\n",
         "par(mfrow = c(3,1))\n",
-        "plotRGB(p224r63_2011, r = 3, g = 2, b = 1, stretch = \"lin\")\n",
-        "plotRGB(p224r63_2011, r = 4, g = 3, b = 2, stretch = \"lin\")\n",
-        "plotRGB(p224r63_2011.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011, r = 3, g = 2, b = 1, stretch = \"lin\") # true color images\n",
+        "plotRGB(p224r63_2011, r = 4, g = 3, b = 2, stretch = \"lin\") # false color images\n",
+        "plotRGB(p224r63_2011.pca$map, r = 1, g = 2, b = 3, stretch = \"lin\") # latent color images\n",
         "dev.off()"
       ],
       "execution_count": null,
