Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYvax9qyYc2WZZrDRmGZ/o"
+      "authorship_tag": "ABX9TyNk29gKs9ckAYIv37HuRa+K"
     },
     "kernelspec": {
       "name": "ir",
@@ -147,13 +147,13 @@
           "height": 170
         },
         "id": "QGr8OXt-iiDd",
-        "outputId": "fefb0c4c-e342-4b06-ec84-ed3dec3360f8"
+        "outputId": "ac9a48c7-bde1-4564-8d60-5d5d907a5773"
       },
       "source": [
         "p224r63_2011 <- raster::brick(\"p224r63_2011_masked.grd\")\n",
         "p224r63_2011"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -247,7 +247,7 @@
         "p224r63_2011.pca <- RStoolbox::rasterPCA(p224r63_2011)\n",
         "p224r63_2011.pca"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,8 +302,16 @@
       },
       "source": [
         "Through this transformation the measurements contained in the spectral bands are redistributed in the new components (synthetic bands) so that most of the information of the multispectral image is contained in the first three principal components (variance explained = 99.9956%).\n",
-        "\n",
-        "**Loadings matrix**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmZcU5PzSBLt"
+      },
+      "source": [
+        "### Loadings matrix\n",
         "\n",
         "The load matrix provides information on how much each band \"weighs\" and how each band is associated with each of the PCs.\n",
         "For example, the PC1 is described mainly by the thermal infrared band (B6_bt = 0.999)."
@@ -312,12 +320,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X29bm9_AMDSe",
-        "outputId": "d916ef61-5147-4f15-f404-3ccb6878eca5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
-        }
+        },
+        "id": "X29bm9_AMDSe",
+        "outputId": "d916ef61-5147-4f15-f404-3ccb6878eca5"
       },
       "source": [
         "loadings(p224r63_2011.pca$model)"
@@ -415,6 +423,9 @@
       },
       "source": [
         "### Image resampling\n",
+        "If you want to perform the entire procedure on your machine and not on Colab's, you can apply image scaling techniques in order to reduce the calculation time of your statistics.\n",
+        "\n",
+        "Image scaling can be interpreted as a form of image resampling or image reconstruction.\n",
         "*Resampling* is the mathematical technique used to create a new version of the image with a different width and/or height in pixels. Increasing the size of an image is called *upsampling*; reducing its size is called *downsampling*.\n",
         "\n",
         "The image size reduction occurs through the [aggregate](https://www.rdocumentation.org/packages/raster/versions/3.4-10/topics/aggregate) function of the `raster` package which groups the initial pixels in order to create larger cells.\n",
@@ -430,13 +441,13 @@
           "height": 170
         },
         "id": "3u9WdEs2lHch",
-        "outputId": "12dc9819-32f4-4d66-829d-e4c70b4c7f9e"
+        "outputId": "22eb1d7d-ae16-4f53-f3fb-c00d85f380ff"
       },
       "source": [
         "p224r63_2011.res <- aggregate(p224r63_2011, fun=mean, fact=10)\n",
         "p224r63_2011.res"
       ],
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -474,10 +485,10 @@
         "id": "v2mZ7PSxza2P"
       },
       "source": [
-        "# PCA\n",
+        "# PCA resampling\n",
         "p224r63_2011.res.pca <- RStoolbox::rasterPCA(p224r63_2011.res)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -486,11 +497,9 @@
         "id": "Ej1RzdtB_M8c"
       },
       "source": [
-        "Use the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function to compare the different spatial resolution between the initial image and the resampled one.\n",
+        "Use the `par()` function to compare the different spatial resolution between the initial image and the resampled one.\n",
         "\n",
-        "Export the image using the [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function to enlarge it better and view the differences.\n",
-        "\n",
-        "N.B. always use the `dev.off()` function to manage the correct closing and loading of the graphics space."
+        "Export the image using the `pdf()` function to enlarge it better and view the differences.\n"
       ]
     },
     {
@@ -501,9 +510,9 @@
       "source": [
         "pdf(file = '/content/downsampling.pdf')\n",
         "par(mfrow=c(2,2))\n",
-        "plotRGB(p224r63_2011, r=4, g=3, b=2, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011, r=3, g=2, b=1, stretch=\"lin\")\n",
         "plotRGB(p224r63_2011.res, r=1, g=2, b=3, stretch=\"lin\")\n",
-        "plotRGB(p224r63_2011.pca, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plotRGB(p224r63_2011.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
         "plotRGB(p224r63_2011.res.pca$map, r=1, g=2, b=3, stretch=\"lin\")\n",
         "dev.off()"
       ],
