Creato con Colaboratory

--- a/R_code_multivariate_analysis.ipynb
+++ b/R_code_multivariate_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_multivariate_analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk29gKs9ckAYIv37HuRa+K"
+      "authorship_tag": "ABX9TyP2hBGn1id5S4oPIviS8lGK"
     },
     "kernelspec": {
       "name": "ir",
@@ -36,8 +36,14 @@
       },
       "source": [
         "# Dimensionality Reduction \n",
-        "[Principal components analysis](https://en.wikipedia.org/wiki/Principal_component_analysis) (PCA) is a technique applied to multispectral and hyperspectral remotely sensed data. PCA transforms an original correlated dataset into a substantially smaller set of uncorrelated variables that represents most of the information present in the original dataset. It reduces data dimensionality (e.g., number of bands). Instead of throwing away the redundant data, principal components analysis condenses the information in intercorrelated variables into a few variables, called principal components.\n",
         "\n",
+        "In multispectral or multidimensional remote sensing data, a different degree of correlation between the bands is often observed. This may depend on real factors, such as the physical nature of the observed surfaces, the width of the spectral band, the noise inherent in the data.\n",
+        "The problem can be overcome by choosing the spectral bands that are statistically least correlated with each other. However, it is not easy to identify which variables are less significant in expressing the overall variability of the data.\n",
+        "It is preferable to use a transformation procedure that allows you to summarize the information of the original data with a smaller number of dimensions. If the new dimensions define a new set of variables, not related to each other,\n",
+        "these are called principal components or PCs.\n",
+        "Each PCs is constructed as a linear combination of the original variables (spectral bands) and the procedure used is named as [Principal components analysis](https://en.wikipedia.org/wiki/Principal_component_analysis) (PCA).\n",
+        "\n",
+        "![](https://i.pinimg.com/originals/c0/0a/47/c00a47aa8cf775c124473a060d26a3b9.jpg)\n",
         "\n"
       ]
     },
